# verilog-covered

./: COPYING  ChangeLog  Makefile.in  NEWS  TODO  config.h  configure  configure.in  covered.spec  release.in
diags/cdd/: add1.cdd  aedge1.1.cdd  aedge1.cdd  afunc1.cdd  afunc2.cdd  always1.cdd  always10.cdd  always11.1.cdd  always11.2.cdd  always11.cdd  always12.cdd  always13.cdd  always15.cdd  always2.cdd  always3.1.11A.cdd  always3.cdd  always4.cdd  always5.1.cdd  always5.cdd  always6.cdd  always7.1.cdd  always7.cdd  always8.cdd  always9.cdd  always_comb1.cdd  always_comb2.cdd  always_ff1.cdd  always_latch1.cdd  always_latch2.cdd  ashift1.cdd  ashift2.cdd  ashift3.cdd  ashift4.cdd  assert1.cdd  assign1.cdd  assign2.1.cdd  assign2.2.cdd  assign2.3.cdd  assign2.4.cdd  assign2.5.cdd  (+956 more)
diags/err/: err1.0.err  err5.3.err  err5.4.err  err6.3.err  merge5.err  merge_help.err  report_help.err  score_help.err
diags/regress/: Makefile  add1.cfg  aedge1.1.cfg  aedge1.cfg  afunc1.cfg  afunc2.cfg  always1.cfg  always10.cfg  always11.1.cfg  always11.2.cfg  always11.cfg  always12.cfg  always13.cfg  always15.cfg  always2.cfg  always3.1.11A.cfg  always3.cfg  always4.cfg  always5.1.cfg  always5.cfg  always6.cfg  always7.1.cfg  always7.cfg  always8.cfg  always9.cfg  always_comb1.cfg  always_comb2.cfg  always_ff1.cfg  always_latch1.cfg  always_latch2.cfg  ashift1.cfg  ashift2.cfg  ashift3.cfg  ashift4.cfg  assert1.cfg  assign1.cfg  assign2.1.cfg  assign2.2.cfg  assign2.3.cfg  assign2.4.cfg  (+1127 more)
diags/rpt/: add1.rptI  add1.rptM  aedge1.1.rptI  aedge1.1.rptM  aedge1.rptI  aedge1.rptM  always1.rptI  always1.rptM  always10.rptI  always10.rptM  always11.1.rptI  always11.1.rptM  always11.2.rptI  always11.2.rptM  always11.rptI  always11.rptM  always12.rptI  always12.rptM  always13.rptI  always13.rptM  always15.rptI  always15.rptM  always2.rptI  always2.rptM  always3.1.11A.rptI  always3.1.11A.rptM  always3.rptI  always3.rptM  always4.rptI  always4.rptM  always5.1.rptI  always5.1.rptM  always5.rptI  always5.rptM  always6.rptI  always6.rptM  always7.1.rptI  always7.1.rptM  always7.rptI  always7.rptM  (+568 more)
diags/src/: diag.c  diag.h  list.c  list.h  run.c  run_cmd.c  run_cmd.h
diags/verilog/: Makefile  always7.vcd.hier  ashift1.v  bug2794588.v  cdd_diff  concat7.v  cond4.cdd.tmpdiff  cond4.v  convert_cfg  covered_vpi.tab  covered_vpi.v  dash-name.v  div1.dump  div1.v  elsif3.v  err5.1.cdd.bad  err5.v  exclude10.3.v  exclude12.1.out  exclude12.2.out  exclude12.3.out  exclude12.4.out  exclude12.5.out  exclude12.6.out  exclude12.out  exclude13.out  exclude5.1.v  exclude7.v  expand5.v  func6.cdd.tmpdiff  func6.v  generate18.v  generate19.3.v  generate19.v  generate20.v  generate22.1.v  generate22.2.v  generate22.3.v  generate22.v  generate23.v  (+52 more)
doc/: Makefile.am  Makefile.in  covered.1  covered.dox
doc/docbook/: Makefile  Makefile.am  Makefile.in  catalog.xml  chapter_attributes.xml  chapter_boundaries.xml  chapter_debug.xml  chapter_epilogue.xml  chapter_faq.xml  chapter_gui_assert.xml  chapter_gui_assert_src.xml  chapter_gui_fsm.xml  chapter_gui_line.xml  chapter_gui_logic.xml  chapter_gui_main.xml  chapter_gui_memory.xml  chapter_gui_new.xml  chapter_gui_preferences.xml  chapter_gui_rank.xml  chapter_gui_report_gen.xml  chapter_gui_toggle.xml  chapter_gui_wizard.xml  chapter_intro.xml  chapter_merge.xml  chapter_metrics.xml  chapter_race.xml  chapter_rank.xml  chapter_reading.xml  chapter_report.xml  chapter_score.xml  chapter_start.xml  covered.xsl  covered_doc.xml
doc/docbook/html/: Makefile  chapter.attr.html  chapter.boundaries.html  chapter.debug.html  chapter.epilogue.html  chapter.faq.html  chapter.gui.assert.html  chapter.gui.assert.source.html  chapter.gui.fsm.html  chapter.gui.genreport.html  chapter.gui.intro.html  chapter.gui.line.html  chapter.gui.logic.html  chapter.gui.main.html  chapter.gui.memory.html  chapter.gui.new.html  chapter.gui.preferences.html  chapter.gui.toggle.html  chapter.gui.wizard.html  chapter.installation.html  chapter.intro.html  chapter.merge.html  chapter.metrics.html  chapter.race.html  chapter.rank.html  chapter.reading.html  chapter.report.html  chapter.score.html  chapter.start.html  chapter.using.html  index.html  part.command.line.usage.html  part.epilogue.html  part.faq.html  part.gui.html  part.installation.html  part.overview.html
doc/gui/: Makefile.in  assert.help  comb.help  cov_view.help  file_menu.help  fsm.help  help.help  help_menu.help  info_bar.help  intro.help  line.help  memory.help  pref_color.help  pref_goals.help  pref_main.help  pref_report.help  pref_syntax.help  report_gen.help  report_menu.help  src_view.help  summary.help  toggle.help  toggle.html  view_menu.help
doc/html/: chapter.attr.html  chapter.boundaries.html  chapter.debug.html  chapter.epilogue.html  chapter.exclude.html  chapter.faq.html  chapter.gui.assert.html  chapter.gui.exclude.html  (+39 more)
lib/: Makefile.am  Makefile.in
scripts/: .coveredrc  Makefile  Makefile.am  Makefile.in  assert.tcl  balloon.tcl  cdd_view.tcl  comb.tcl  cov_create.tcl  create_new.tcl  exclude.tcl  fsm.tcl  gen_new.tcl  gen_rank.tcl  gen_report.tcl  help.tcl  help_wrapper.tcl  main_view.tcl  memory.tcl  menu_create.tcl  preferences.tcl  process_file.tcl  summary.tcl  toggle.tcl  verilog.tcl  viewer.tcl  wizard.tcl
src/: Makefile.am  Makefile.in  arc.c  arc.h  assertion.c  assertion.h  attr.c  attr.h  binding.c  binding.h  cli.c  cli.h  codegen.c  codegen.h  comb.c  comb.h  cov_db.c  cov_db.h  db.c  db.h  defines.h  devel_doc.h  enumerate.c  enumerate.h  exclude.c  exclude.h  expr.c  expr.h  fsm.c  fsm.h  fsm_arg.c  fsm_arg.h  fsm_sig.c  fsm_sig.h  fsm_var.c  fsm_var.h  fst.c  fst.h  fstapi.c  func_iter.c  (+118 more)
(+73 files in other folders)
