tcldir      = $(datadir)/covered/scripts
tcl_SCRIPTS = assert.tcl \
              banner.gif \
              cdd_view.tcl \
              comb.tcl \
              cov_create.tcl \
              cov_icon.gif \
              create_new.tcl \
              fsm.tcl \
              help.tcl \
              help_wrapper.tcl \
              help_tbl.tcl \
              left_arrow.gif \
              main_view.tcl \
              memory.tcl \
              menu_create.tcl \
              preferences.tcl \
              process_file.tcl \
              right_arrow.gif \
              summary.tcl \
              toggle.tcl \
              verilog.tcl \
              wizard.tcl

cfgdir      = $(datadir)/covered
cfg_DATA    = .coveredrc
